5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1582_1327.log
== TEST (2019-03-21 16:55:13) 
-- CODE:
print("35")

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:36) 
-- CODE:
print("90-35")

-- OUTPUT:
90-35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:49) 
-- CODE:
print float("90-35")

-- ERROR:
File "XXXX", line 1
    print float("90-35")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:01) 
-- CODE:
print int("90-35")

-- ERROR:
File "XXXX", line 1
    print int("90-35")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:28) 
-- CODE:
print int("90-35")

-- ERROR:
File "XXXX", line 1
    print int("90-35")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:39) 
-- CODE:
print int("90-35")

-- ERROR:
File "XXXX", line 1
    print int("90-35")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:24:56) 
-- CODE:
print int(90-35)

-- ERROR:
File "XXXX", line 1
    print int(90-35)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:25:37) 
-- CODE:
print(35)

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:25:44) 
-- CODE:
print(35)

-- EXECUTION TIME:
0.192257
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
